# Formulate

./: README.md  com.github.eemilp.Formulate.json  meson.build
data/: com.github.eemilp.Formulate.desktop.in  com.github.eemilp.Formulate.gschema.xml  com.github.eemilp.Formulate.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  POTFILES.in  meson.build
src/: cell.blp  cell.py  converter.py  cursor.py  data.py  document.blp  document.py  formula.py  formulabox.blp  formulabox.py  formulate.gresource.xml  formulate.in  main.py  meson.build  parser.py  qalculator.py  style-dark.css  style.css  textbox.blp  textbox.py  utils.py  window.blp  window.py  window.ui
src/elements/: abstractelement.py  abstractwrapped.py  atom.py  element.py  elements.py  frac.py  index.py  paren.py  radical.py  sum.py  supersubscript.py
src/gtk/: help-overlay.blp
